--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <!--[if IE]>
+      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+    <![endif]-->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
